# operator-core

./: .gitignore  LICENSE  README.md  SPRINT_REVENUE_COCKPIT_2026-04-23.md  pyproject.toml
.github/workflows/: verify.yml
docs/: AUDIT_FIXES_2026-04-17.md  CUTOVER_BLOCKER_PP_OE_2026-05-05.md  CUTOVER_PLAN_2026-05-05.md  CUTOVER_STATE_2026-05-05.md  MORNING_BRIEFING_SETUP.md  MORNING_BRIEFING_V2_DESIGN.md  REPLY_CLASSIFIER_VERIFY_2026-05-05.md  operator-leads-schema.sql  operator-run-spec.md
recipes/: __init__.py  _paths.py  anthropic_spend_alarm.py  audit_intake.py  auto_merge_labeled.py  auto_merge_suppression.py  briefing_eod.py  briefing_midday.py  ci_triage.py  client_health.py  commitment_tracker.py  cost_tracker.py  cut_over_promoter.py  cutover_rollback_watch.py  dep_guardian.py  deploy_checker.py  discord_health.py  disk_pressure.py  feature_builder.py  gate_audit_ingest.py  git_drift_audit.py  gmail_triage.py  hot_lead_dossier.py  marketing_pulse.py  morning_briefing.py  outreach_pulse.py  outreach_weekly.py  pl_auditor.py  portfolio_health.py  pr_reviewer.py  project_snapshot.py  reply_classifier_sweep.py  revenue_cockpit.py  secrets_audit.py  sender_gate_digest.py  sprint_report.py  stale_branches.py  status_rollup.py  status_sync.py  strategic_advisor.py  (+3 more)
schedules/: schedule.yaml
scripts/: Register-Operator.ps1  hidden-run.vbs  snapshot-once.ps1  start-operator.ps1
scripts/redirects/: README.md  generate.py  run-anthropic-spend-alarm.bat  run-audit-intake.bat  run-briefing-eod.bat  run-briefing-midday.bat  run-ci-triage.bat  run-client-health.bat  run-commitment-tracker.bat  run-cost-tracker.bat  run-dep-guardian.bat  run-deploy-checker.bat  run-discord-health.bat  run-disk-pressure.bat  run-feature-builder.bat  run-git-drift-audit.bat  run-gmail-triage.bat  run-hot-lead-dossier.bat  run-marketing-pulse.bat  run-morning-briefing.bat  run-outreach-pulse.bat  run-outreach-weekly.bat  run-pl-auditor.bat  run-pr-reviewer.bat  run-project-snapshot.bat  run-revenue-cockpit.bat  run-secrets-audit.bat  run-sprint-report.bat  run-stale-branches.bat  run-status-rollup.bat  run-strategic-advisor.bat  run-todo-hunter.bat  run-watchdog.bat
src/operator_core/: __init__.py  action_packets.py  adapters.py  agent.py  agent_launches.py  analysis.py  autonomy.py  briefing.py  cli.py  cockpit_routes.py  commands.py  config.py  cost_events.py  cutover_routes.py  cutover_streak.py  daemon.py  demand_os.py  demand_routes.py  demo.py  deploy_health.py  discord_bot.py  discord_slash.py  fleet.py  gate_review.py  gate_review_classifier.py  gate_review_render.py  gate_review_routes.py  hooks_command.py  hooks_installer.py  http_server.py  lead_ledger.py  memory.py  metrics.py  outreach_audit.py  outreach_audit_html.py  paths.py  pl_analyst.py  pl_engine.py  portfolio.py  portfolio_routes.py  (+28 more)
src/operator_core/_vendor/: events_ndjson.py  status_spec.py
src/operator_core/integrations/: __init__.py  anthropic.py  discord.py  gmail.py  supabase.py
src/operator_core/recipes/: __init__.py  base.py  lifecycle.py  registry.py  runtime.py  schedule.py  verify.py
src/operator_core/templates/: __init__.py
src/operator_core/utils/: __init__.py  discord.py  status.py  status_spec_emit.py  supabase_client.py
tests/: conftest.py  test_action_packets.py  test_agent_launches.py  test_agent_wrapper.py  test_briefing_v4.py  test_classifier_metrics.py  test_cockpit_routes.py  test_cost_events.py  test_cost_tracker_rollup.py  test_cutover_routes.py  test_cutover_streak.py  test_daemon.py  test_demand_os.py  test_demand_routes.py  test_demo_briefing.py  test_deploy_health_canary.py  test_discord_slash.py  test_fleet.py  test_gate_review.py  test_gate_review_classifier.py  test_gate_review_render.py  test_gate_review_routes.py  test_hook_install_plan.py  test_lead_digest_runner.py  test_lead_ledger.py  test_legacy_scripts_registry.py  test_metrics_endpoint.py  test_morning_briefing.py  test_native_daemon.py  test_no_hardcoded_paths.py  test_operator_v3_commands.py  test_operator_v3_config_store.py  test_operator_v3_discord_bot.py  test_operator_v3_hooks_payloads.py  test_operator_v3_http_scheduler.py  test_operator_v3_runner_worktree.py  test_operator_v3_security.py  test_ops_page.py  test_outreach_audit.py  test_outreach_audit_html.py  (+38 more)
