[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operator-core"
version = "0.1.0"
description = "Self-hosted AI operator daemon for multi-project founders. Background agents, scheduled recipes, Discord bot, portfolio brain."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kruz Holt" }
]
keywords = ["claude", "claude-code", "ai-agents", "automation", "operator", "daemon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]
status  = ["rich>=13.0"]
# status-spec + events-ndjson are not yet on PyPI. Until they are, point
# to the git roots (PEP 508 direct refs). Pip needs --no-build-isolation
# disabled by default, but supports git URLs directly via VCS support.
# Once the packages publish to PyPI, swap these for plain version specs.
specs   = [
    "status-spec @ git+https://github.com/kjhholt-alt/status-spec.git#subdirectory=writers/python",
    "events-ndjson @ git+https://github.com/kjhholt-alt/events-ndjson.git#subdirectory=libraries/python",
]
dev     = ["pytest>=7.4", "pytest-asyncio>=0.21", "rich>=13.0"]
# Sibling libs consumed by recipes (e.g. ``portfolio_health``) are NOT
# listed as a dependency yet -- they ship as separate sibling repos
# (``templated-dashboards``, ``events-ndjson``, ``status-spec``) and
# aren't on PyPI as of this commit. Recipes that need them gate their
# tests behind ``pytest.importorskip(...)`` and fall back gracefully
# in ``verify()`` so plain installs keep working.

[project.scripts]
operator = "operator_core.cli:main"

[project.urls]
Homepage = "https://operator.buildkit.store"
Source   = "https://github.com/kjhholt-alt/operator-core"
Issues   = "https://github.com/kjhholt-alt/operator-core/issues"
Docs     = "https://operator.buildkit.store/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
operator_core = ["templates/*", "schema/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
